--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ sourceSets {
     */
     logger.info "@@@1 testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
     logger.info "@@@1 testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
-    testIntegration.runtimeClasspath.each {
+    testIntegration.runtimeClasspath.iterator().each {
         logger.info "@@@1 testIntegration.runtimeClasspath (content): ${it}"
     }
     testIntegration.compileClasspath += configurations.testIntConf
