build.gradle: log contents of configurations.testIntConf classpath (enhanced)

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,16 @@ sourceSets {
     logger.info "@@@ configurations.provided (type): " + configurations.provided.getClass()
     logger.info "@@@ configurations.testIntConf (type): " + configurations.testIntConf.getClass()
     configurations.testIntConf.getDependencies().each {
-        logger.info "@@@ configurations.testIntConf (content): ${it}"
+        logger.info "@@@ configurations.testIntConf (dependency): ${it}"
+    }
+    configurations.testIntConf.getAllDependencies().each {
+        logger.info "@@@ configurations.testIntConf (allDependency): ${it}"
+    }
+    configurations.testIntConf.getArtifacts().each {
+        logger.info "@@@ configurations.testIntConf (artifact): ${it}"
+    }
+    configurations.testIntConf.getAllArtifacts().each {
+        logger.info "@@@ configurations.testIntConf (allArtifact): ${it}"
     }
     logger.info "@@@ main.compileClasspath (type): " + main.compileClasspath.getClass()
     logger.info "@@@ testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
