--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,9 @@ configurations {
     provided {
         extendsFrom(compile)
     }
-    testIntConf
+    testIntConf = provided.copyRecursive()
     testIntConf {
-        extendsFrom(provided)
+        //extendsFrom(provided)
         resolutionStrategy {
             force "com.google.guava:guava:${verGuavaTEST}"
             forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
