build.gradle: configurations.testIntConf copies provided configuration rather than extending it

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ configurations {
     provided {
         extendsFrom(compile)
     }
+    testIntConf
     testIntConf = provided.copyRecursive()
     testIntConf {
         //extendsFrom(provided)
