--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ configurations {
 }
 
 sourceSets {
-    testIntConf = configurations.provided.copyRecursive()
+    def testIntConf = configurations.provided.copyRecursive()
     testIntConf {
         //extendsFrom(provided)
         resolutionStrategy {
