build.gradle: configurations.testIntConf copies provided configuration rather than extending it

--- a/build.gradle
+++ b/build.gradle
@@ -48,12 +48,9 @@ configurations {
 
 sourceSets {
     def testIntConf = configurations.provided.copyRecursive()
-    testIntConf {
-        //extendsFrom(provided)
-        resolutionStrategy {
-            force "com.google.guava:guava:${verGuavaTEST}"
-            forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
-        }
+    testIntConf.resolutionStrategy {
+        force "com.google.guava:guava:${verGuavaTEST}"
+        forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
     }
 
     logger.info "@@@ configurations.provided (type): " + configurations.provided.getClass()
