--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ configurations {
 }
 
 sourceSets {
-    def testIntConf = configurations.provided.copyRecursive()
+    def testIntConf = configurations.compile.copyRecursive()
     testIntConf.resolutionStrategy {
         force "com.google.guava:guava:${verGuavaTEST}"
         forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
