--- a/build.gradle
+++ b/build.gradle
@@ -33,71 +33,44 @@ configurations {
     provided {
         extendsFrom(compile)
     }
-    /*
     testIntConf
-    testIntConf = provided.copyRecursive()
     testIntConf {
-        //extendsFrom(provided)
+        extendsFrom(provided)
         resolutionStrategy {
             force "com.google.guava:guava:${verGuavaTEST}"
             forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
         }
     }
-    */
 }
 
 sourceSets {
-    def testIntConf = configurations.compile.copyRecursive()
-    testIntConf.resolutionStrategy {
-        force "com.google.guava:guava:${verGuavaTEST}"
-        forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
-    }
-
     logger.info "@@@ configurations.provided (type): " + configurations.provided.getClass()
-    logger.info "@@@ testIntConf (type): " + testIntConf.getClass()
-    logger.info "@@@ testIntConf DEPENDENCIES ~start~"
-    logger.info "@@@ testIntConf.getDependencies(): ${testIntConf.getDependencies()}"
-    logger.info "@@@ testIntConf.getAllDependencies(): ${testIntConf.getAllDependencies()}"
-    logger.info "@@@ testIntConf.getArtifacts(): ${testIntConf.getArtifacts()}"
-    logger.info "@@@ testIntConf.getAllArtifacts(): ${testIntConf.getAllArtifacts()}"
-    testIntConf.getDependencies().iterator().each {
-        logger.info "@@@ testIntConf (dependency): ${it}"
-    }
-    testIntConf.getAllDependencies().iterator().each {
-        logger.info "@@@ testIntConf (allDependency): ${it}"
-    }
-    testIntConf.getArtifacts().iterator().each {
-        logger.info "@@@ testIntConf (artifact): ${it}"
-    }
-    testIntConf.getAllArtifacts().iterator().each {
-        logger.info "@@@ testIntConf (allArtifact): ${it}"
-    }
-    logger.info "@@@ testIntConf DEPENDENCIES ~complete~"
+    logger.info "@@@ configurations.testIntConf (type): " + configurations.testIntConf.getClass()
     logger.info "@@@ main.compileClasspath (type): " + main.compileClasspath.getClass()
     logger.info "@@@ testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
     logger.info "@@@ testUnit.runtimeClasspath (type): " + testUnit.runtimeClasspath.getClass()
     logger.info "@@@ testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
     logger.info "@@@ testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
+
     main.compileClasspath += configurations.provided
     testUnit.compileClasspath += configurations.provided
     testUnit.runtimeClasspath += configurations.provided
-    /*
-    testIntegration.compileClasspath.resolutionStrategy {
-        force "com.google.guava:guava:${verGuavaTEST}"
-        forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
-    }
-    testIntegration.runtimeClasspath.resolutionStrategy {
-        force "com.google.guava:guava:${verGuavaTEST}"
-        forcedModules = ["com.google.guava:guava:${verGuavaTEST}"]
-    }
-    */
+
     logger.info "@@@1 testIntegration.compileClasspath (type): " + testIntegration.compileClasspath.getClass()
     logger.info "@@@1 testIntegration.runtimeClasspath (type): " + testIntegration.runtimeClasspath.getClass()
     testIntegration.runtimeClasspath.iterator().each {
         logger.info "@@@1 testIntegration.runtimeClasspath (content): ${it}"
     }
+
     testIntegration.compileClasspath += testIntConf
     testIntegration.runtimeClasspath = testIntConf
+
+    logger.info "@@@1 testIntegration.runtimeClasspath FILES ~start~"
+    logger.info "@@@1 testIntegration.runtimeClasspath.getFiles(): ${testIntegration.runtimeClasspath.getFiles()}"
+    testIntegration.runtimeClasspath.getFiles().each {
+        logger.info "@@@1 testIntegration.runtimeClasspath (file): ${it}"
+    }
+    logger.info "@@@1 testIntegration.runtimeClasspath FILES ~complete~"
 
     logger.info "@@@2 main.compileClasspath (type): " + main.compileClasspath.getClass()
     logger.info "@@@2 testUnit.compileClasspath (type): " + testUnit.compileClasspath.getClass()
