--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,8 @@ sourceSets {
         logger.info "@@@1 testIntegration.runtimeClasspath (content): ${it}"
     }
 
-    testIntegration.compileClasspath += testIntConf
-    testIntegration.runtimeClasspath = testIntConf
+    testIntegration.compileClasspath += configurations.testIntConf
+    testIntegration.runtimeClasspath = configurations.testIntConf
 
     logger.info "@@@1 testIntegration.runtimeClasspath FILES ~start~"
     logger.info "@@@1 testIntegration.runtimeClasspath.getFiles(): ${testIntegration.runtimeClasspath.getFiles()}"
