--- a/build.gradle
+++ b/build.gradle
@@ -169,8 +169,8 @@ testIntegration {
     useTestNG()
     systemProperty "java.net.preferIPv4Stack", "true"
     logger.info "@@@ Classpath type (INTEGRATION testing): ${classpath.getFiles().getClass()}"
-    classpath.getFiles().each {
-        logger.info "@@@ Classpath type (INTEGRATION testing) :: ${it.getKey()}->${it.getValue()}"
+    for (Map.Entry classpathEntry : classpath.getFiles()) {
+        logger.info "@@@ testIntegration.classpath::${classpathEntry.getKey()}->${classpathEntry.getValue()}"
     }
     logger.info "@@@ Classpath (INTEGRATION testing): ${classpath.getFiles().collect({it.toString()}).inject('\n') {acc, next -> acc + next + '\n'}}"
     logger.info "@@@ SysProps (INTEGRATION testing): ${System.getProperties().collect({it.toString()}).inject('\n') {acc, next -> acc + next + '\n'}}"
