--- a/build.gradle
+++ b/build.gradle
@@ -168,7 +168,7 @@ testUnit {
 }
 
 testIntegration {
-    classpath = classpath.minus(configurations.testIntConf);
+    classpath = classpath.minus(configurations.guava);
     useTestNG()
     systemProperty "java.net.preferIPv4Stack", "true"
     logger.info "@@@ Classpath type (INTEGRATION testing): ${classpath.getFiles().getClass()}"
