--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,16 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'java-library-distribution'
 
-ext.libraryName = "liaison-hbase-${version}"
+ext.verCommons = '0.1.2-SNAPSHOT'
 ext.verGuava = '18.0'
 ext.verGuavaTEST = '14.0.1'
+ext.verHadoopTEST = '2.5.1'
 ext.verMockito = '1.10.19'
-ext.verPhoenixCommons = '0.0.1-SNAPSHOT'
 ext.verPool = '2.3'
 ext.verQuasar  = '0.6.2'
 ext.verTestNG  = '6.8.21'
+
+ext.classifierQuasar = ':jdk8'
 
 testSets {
     testUnit { dirName = 'test/unit' }
@@ -68,11 +70,6 @@ apply from: file('gradle/check.gradle')
 apply from: file('gradle/license.gradle')
 apply from: file('gradle/maven.gradle')
 
-group = 'com.liaison'
-version = '0.0.1-SNAPSHOT'
-
-ext.classifier = ':jdk8'
-
 if (project.hasProperty('env') && project.getProperty('env') == 'mapr') {
     repositories {
         mavenCentral()
@@ -80,14 +77,18 @@ if (project.hasProperty('env') && project.getProperty('env') == 'mapr') {
             url "http://repository.mapr.com/maven/"
         }
     }
-    ext.verHBase = '0.98.9-mapr-1503-m7-4.1.0'
-    ext.verHadoop = '2.5.1-mapr-1503'
-    ext.verZookeeper = '3.4.5-mapr-1406'
+    ext.verHBase = '0.98.12-mapr-1506'
 } else {
-    ext.verHBase = '0.98.9-hadoop2'
-    ext.verHadoop = '2.5.1'
-    ext.verZookeeper = '3.4.5'
+    ext.verHBase = '0.98.12-hadoop2'
 }
+
+group = 'com.liaison'
+def artifact = "${rootProject.name}"
+version = '0.1.0-SNAPSHOT'
+def packaging = 'jar'
+def classifier = "${verHBase}"
+
+ext.libraryName = "${rootProject.name}-${version}"
 
 jar {
     manifest {
@@ -97,23 +98,23 @@ jar {
 
 dependencies {
     guava group:'com.google.guava', name:'guava', version:"${verGuava}"
-    compile "com.liaison.phoenix:phoenix-commons:${verPhoenixCommons}"
-    compile "co.paralleluniverse:quasar-core:${verQuasar}${classifier}"
+    compile "com.liaison:dm-lib-commons:${verCommons}"
+    compile "co.paralleluniverse:quasar-core:${verQuasar}${classifierQuasar}"
     provided "org.apache.hbase:hbase-client:${verHBase}"
     provided "org.apache.hbase:hbase-common:${verHBase}"
     compile "org.apache.commons:commons-pool2:${verPool}"
     compile "org.testng:testng:${verTestNG}"
     testCompile "org.mockito:mockito-all:${verMockito}"
     testIntegrationCompile group:'com.google.guava', name:'guava', version:"${verGuavaTEST}"
-    testIntegrationCompile group:'org.apache.hadoop', name:'hadoop-common', version:"${verHadoop}", classifier: 'tests'
+    testIntegrationCompile group:'org.apache.hadoop', name:'hadoop-common', version:"${verHadoopTEST}", classifier: 'tests'
     testIntegrationCompile group:'org.apache.hbase', name:'hbase-server', version:"${verHBase}"
     testIntegrationCompile group:'org.apache.hbase', name:'hbase-server', version:"${verHBase}", classifier: 'tests'
     testIntegrationCompile group:'org.apache.hbase', name:'hbase-hadoop-compat', version:"${verHBase}"
     testIntegrationCompile group:'org.apache.hbase', name:'hbase-hadoop-compat', version:"${verHBase}", classifier: 'tests'
     testIntegrationCompile group:'org.apache.hbase', name:'hbase-hadoop2-compat', version:"${verHBase}"
     testIntegrationCompile group:'org.apache.hbase', name:'hbase-hadoop2-compat', version:"${verHBase}", classifier: 'tests'
-    testIntegrationCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoop}"
-    testIntegrationCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoop}", classifier: 'tests'
+    testIntegrationCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoopTEST}"
+    testIntegrationCompile group:'org.apache.hadoop', name:'hadoop-hdfs', version:"${verHadoopTEST}", classifier: 'tests'
 }
 
 task fatJar(type: Jar) {
@@ -160,6 +161,29 @@ uploadArchives {
            dirs 'repos'
        }
     }
+}
+
+task createPom  {
+    pom {
+        project {
+            groupId group
+            artifactId artifact
+            version version
+            inceptionYear '2015'
+            licenses {
+                license {
+                    name 'Liaison Proprietary'
+                    url 'http://www.liaison.com'
+                    distribution 'repo'
+                }
+            }
+        }
+    }.withXml { root ->
+        def children = root.asNode().children()
+        def versionIndex = children.indexOf(children.find {it.name().localPart == 'version'})
+        children.add(versionIndex + 1, new Node(null, 'classifier', classifier))
+        children.add(versionIndex + 1, new Node(null, 'packaging', packaging))
+    }.writeTo("pom.xml")
 }
 
 if (project.hasProperty('mainClass')) {
