--- a/gradle/convention.gradle
+++ b/gradle/convention.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'groovy'
 apply plugin: 'java'
+//apply plugin: 'scala'
 apply plugin: 'eclipse'
+
+
 
 sourceCompatibility = 1.8
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
