--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ if (project.hasProperty('env') && project.getProperty('env') == 'mapr') {
 
 group = 'com.liaison'
 def artifact = "${rootProject.name}"
-version = '0.1.0'
+version = '0.1.1-SNAPSHOT'
 def packaging = 'jar'
 def classifier = "${verHBase}"
 
