Make logging compile dep

--- a/build.gradle
+++ b/build.gradle
@@ -101,8 +101,8 @@ dependencies {
     compile "org.apache.logging.log4j:log4j-core:${verLog4j}"
     compile "com.liaison:dm-lib-commons:${verCommons}"
     compile "co.paralleluniverse:quasar-core:${verQuasar}${classifierQuasar}"
-    provided "org.apache.hbase:hbase-client:${verHBase}"
-    provided "org.apache.hbase:hbase-common:${verHBase}"
+    compile "org.apache.hbase:hbase-client:${verHBase}"
+    compile "org.apache.hbase:hbase-common:${verHBase}"
     compile "org.apache.commons:commons-pool2:${verPool}"
     compile "org.testng:testng:${verTestNG}"
     testCompile "org.mockito:mockito-all:${verMockito}"
