--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
-    }
+    }:
 }
 
 apply plugin: 'java'
@@ -39,7 +39,7 @@ apply plugin: 'java-library-distribution'
 apply plugin: 'maven'
 apply plugin: 'signing'
 
-ext.verBasics = '0.1.0'
+ext.verBasics = '0.1.3'
 ext.verGuava = '19.0'
 ext.verGuavaTEST = '14.0.1'
 ext.verHadoopTEST = '2.5.1'
@@ -83,6 +83,13 @@ sourceSets {
 
 apply from: file('gradle/convention.gradle')
 apply from: file('gradle/check.gradle')
+
+if (!project.hasProperty('ossrhUsername')) {
+    ext.ossrhUsername = '';
+}
+if (!project.hasProperty('ossrhPassword')) {
+    ext.ossrhPassword = '';
+}
 
 if (project.hasProperty('env') && project.getProperty('env') == 'mapr') {
     repositories {
@@ -183,54 +190,47 @@ distributions {
     }
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name "${rootProject.name}"
-                packaging 'jar'
-                artifactId "${rootProject.name}"
-                description 'Shachi: High-Level HBase Client Abstraction Layer'
-                url 'https://github.com/LiaisonTechnologies/shachi'
-
-                scm {
-                    connection 'scm:git:https://github.com/LiaisonTechnologies/shachi.git'
-                    developerConnection 'scm:git:git@github.com:LiaisonTechnologies/shachi.git'
-                    url 'https://github.com/LiaisonTechnologies/shachi'
-                }
-
-                licenses {
-                    license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-            }
-        }
-    }
-}
-
 task createPom  {
     pom {
         project {
             artifactId artifact
             version version
             inceptionYear '2015'
+            name "${rootProject.name}"
+            description 'Shachi: High-Level HBase Client Abstraction Layer'
+            url 'https://github.com/LiaisonTechnologies/shachi'
+
+            organization {
+                name 'Liaison Technologies, Inc.'
+                url 'http://www.liaison.com'
+            }
+
+            scm {
+                connection 'scm:git:https://github.com/LiaisonTechnologies/shachi.git'
+                developerConnection 'scm:git:git@github.com:LiaisonTechnologies/shachi.git'
+                url 'https://github.com/LiaisonTechnologies/shachi'
+            }
+
             licenses {
                 license {
-                    name 'The Apache Software License, Version 2.0'
-                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    distribution 'repo'
+                    name 'The Apache License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0'
+                }
+            }
+
+            developers {
+                developer {
+                    name 'Liaison Technologies'
+                    email 'sales@liaison.com'
+                    organization 'Liaison Technologies, Inc.'
+                    organizationUrl 'http://www.liaison.com'
+                }
+            }
+
+            distributionManagement {
+                snapshotRepository {
+                    id 'ossrh'
+                    url 'https://oss.sonatype.org/content/repositories/snapshots'
                 }
             }
         }
@@ -252,6 +252,22 @@ task createPom  {
         versionIndex = children.indexOf(children.find {it.name().localPart == 'version'})
         children.add(versionIndex + 1, new Node(null, 'packaging', packaging))
     }.writeTo("pom.xml")
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: "${ossrhUsername}", password: "${ossrhPassword}")
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: "${ossrhUsername}", password: "${ossrhPassword}")
+            }
+        }
+    }
 }
 
 if (project.hasProperty('mainClass')) {
